<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SelectSpecifiedFoodActivity"
    tools:layout_editor_absoluteY="25dp">

    <!--<anroid.support.design.widget.BottomNavigationView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--app:menu="@menu/bottom_navigation"-->
    <!--/>-->

    <android.support.v7.widget.RecyclerView
        android:id="@+id/food_list_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="58dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/food_list_rv"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/ly_tab_bar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_menu_bg"
                android:drawableTop="@drawable/tab_menu_home"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/Home"
                android:textColor="@drawable/tab_menu_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_progress"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_menu_bg"
                android:drawableTop="@drawable/tab_manu_progress"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/Progress"
                android:textColor="@drawable/tab_menu_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_community"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_menu_bg"
                android:drawableTop="@drawable/tab_manu_community"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/Community"
                android:textColor="@drawable/tab_menu_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_profile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_menu_bg"
                android:drawableTop="@drawable/tab_manu_profile"
                android:drawablePadding="3dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/Profile"
                android:textColor="@drawable/tab_menu_text"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:id="@+id/div_tab_bar"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_above="@id/ly_tab_bar"
            android:background="@color/colorWhite" />


        <FrameLayout
            android:id="@+id/ly_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/div_tab_bar"
            android:layout_below="@id/ly_top_bar"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="0dp">

        </FrameLayout>
    </LinearLayout>

</RelativeLayout>
